discussion/kv_engine/124263/124263_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-36373: Add BackgroundCompact StorageProperty

Magma does not allow explicit compactions to run concurrently with
writes. It instead performs implicit (background) compactions to deal
with fragmentation. This is subtly different from the
ConcurrentWriteCompact StorageProperty so add a new BackgroundCompact
StorageProperty to identify this that will be used in a future patch.

Change-Id: I921f108698e0238a4583296599bf0f60002bbb30

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2020-03-25 17:37:42.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-03-25 18:29:08.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/27091/ : FAILURE

Link error: error LNK2019: unresolved external symbol "__declspec(dllimport) public: __cdecl google::base::CheckOpMessageBuilder::CheckOpMessageBuilder(char const *)" (__imp_??0CheckOpMessageBuilder@base@google@@QEAA@PEBD@Z) referenced in function "class std::basic_string<char,struct std::char_traits<char>,class std::allocator<char> > * __cdecl google::MakeCheckOpString<double,double>(double const &,double const &,char const *)" (??$MakeCheckOpString@NN@google@@YAPEAV?$basic_string@DU?$char_traits@D@std@@V?$allocator@D@2@@std@@AEBN0PEBD@Z) ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/27091/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/23163/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:296:15:
error: no member named "size" in "_docinfo"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/23163/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1340/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:296:15: error: no member named "size" in "_docinfo" [clang-diagnostic-error]
    dbDocInfo.size = dbDoc.data.size;
              ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1971:63: error: no member named "size" in "_docinfo" [clang-diagnostic-error]
                vbId, *docinfo, *metadata, {nullptr, docinfo->size});
                                                              ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:2261:53: error: no member named "size" in "_docinfo" [clang-diagnostic-error]
    return info.id.size + info.rev_meta.size + info.size;
                                                    ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1340/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:296:15:
error: no member named "size" in "_docinfo" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1340/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/2739/ : FAILURE

Compile error at [2020-03-25T18:05:53.659Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:296:15:
error: ?DocInfo {aka struct _docinfo}? has no member named ?size?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/2739/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/2736/ : FAILURE

Compile error at [2020-03-25T18:12:35.764Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:296:15:
error: ?DocInfo {aka struct _docinfo}? has no member named ?size?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/2736/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/2787/ : FAILURE

Compile error at [2020-03-25T18:10:01.365Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:296:15:
error: ?DocInfo {aka struct _docinfo}? has no member named ?size?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/2787/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/10593/ : FAILURE

Compile error at [2020-03-25T18:12:25.319Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:296:15:
error: ?DocInfo {aka struct _docinfo}? has no member named ?size?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/10593/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/1786/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format/25461/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
